# tiny_stories

./: .gitignore  LICENSE  README.md  bench.py  demo.py  pyproject.toml  sample.py  train.py
src/tiny_stories/: config.py  dataset.py  model.py  tokeniser.py
src/tiny_stories/data/: README.md  prepare.py
